# ByteCode-Compiler

./: .gitignore  ByteCode_key.pem  CMakeLists.txt  DEPLOYMENT.md  README.md  run.sh
.github/workflows/: ci.yml
benchmarks/: benchmark.py  factorial.src  fib.src  sum_loop.src
docs/: ARCHITECTURE.md  c1_project-setup.md  c2_lexar-implementation.md  c3_ast-parser-skeleton.md  c4_parser-implementation.md  c5_codegen-implementation.md  c6_vm-implementation.md  c7_optimizer-implementation.md  c8_control-flow.md  c9_arrays-repl.md
examples/: README.md  comprehensive_demo.txt
frontend/: .env.example  .gitignore  README.md  next.config.js  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/compile/: route.ts
frontend/app/api/health/: route.ts
frontend/app/compiler/: page.tsx
frontend/app/docs/: page.tsx
frontend/lib/: api.ts
include/: ast.h  codegen.h  common.h  lexer.h  optimizer.h  parser.h  profiler.h  vm.h
results/: dashboard.html
server/: README.md  api.js  deploy.sh  package.json
src/: ast.cpp  codegen.cpp  lexer.cpp  main.cpp  optimizer.cpp  parser.cpp  vm.cpp
tests/: test_arrays.cpp  test_bubblesort.cpp  test_codegen.cpp  test_control_flow.cpp  test_end_to_end.cpp  test_lexer.cpp  test_optimizer.cpp  test_parser.cpp  test_runner.cpp  test_vm.cpp  utils.h
